Fixed color contrast issue on trips page

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -427,7 +427,7 @@ div.tripshero a:hover {
 }
 
 .firstcell {
-    background-color: #19647E;
+    background-color: #0e566e;
     color: white;
 }
 
